src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Contact_Name_Formula__c</fullName>
        <formula>Opportunity.Contact__r.FirstName + &quot; &quot; + Opportunity.Contact__r.LastName</formula>
        <label>Contact Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Time__c</fullName>
        <description>Total one time charges associated with the quote, populated via roll up</description>
        <inlineHelpText>Total one time charges associated with the quote, populated via roll up</inlineHelpText>
        <label>Total One Time</label>
        <summarizedField>QuoteLineItem.One_Time_Charge__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity.Id</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_MRR__c</fullName>
        <description>Total MRR - rollup of MRR custom field on the quote line item</description>
        <inlineHelpText>Total MRR - rollup of MRR custom field on the quote line item</inlineHelpText>
        <label>Total Recurring</label>
        <summarizedField>QuoteLineItem.Recurring_charge__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Any_Edits_on_Quote</fullName>
        <active>true</active>
        <description>Can&apos;t edit quote if status isn&apos;t draft</description>
        <errorConditionFormula>Not( ISPICKVAL(Status, &apos;draft&apos;)) &amp;&amp;   
 $Setup.Admin_Profiles__c.Run_Validation_Rules__c</errorConditionFormula>
        <errorMessage>Hey - you can&apos;t edit a quote once it&apos;s out of &quot;Draft&quot; status. Please contact your manager for assistance.</errorMessage>
    </validationRules>
</CustomObject>